--- a/src/styles/components/_group.scss
+++ b/src/styles/components/_group.scss
@@ -4,7 +4,7 @@
     .dragging-item {
         // transform: scale(1.2);
         transform: rotate(2deg);
-        
+
     }
 
     .chosen-item {
@@ -23,7 +23,8 @@
 
     .input-add-task {
         height: 35px;
-        width: 100%;
+        width: 98.6%;
+        margin-left: 1.5%;
         border: 1px solid transparent;
         box-shadow: 0 3px 4px -5px #484444;
         transition: .4s;
@@ -53,8 +54,9 @@
             }
 
             .group-options-menu {
-                position: absolute;
-                left: 92.5%;
+                position: relative;
+                left: 11%;
+                cursor: pointer;
             }
         }
 
