--- a/src/styles/components/_task-preview.scss
+++ b/src/styles/components/_task-preview.scss
@@ -3,6 +3,7 @@
     height: 35px;
     background-color: $clr2;
     margin-bottom: 0.0625rem;
+    margin-left: 1.5%;
     border-radius: 1px;
     border-right: 8px solid $clr4;
     transition: background-color 0.3s;
