--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -29,6 +29,7 @@
 @import "components/record-msg";
 @import "components/stopwatch";
 @import "components/chart";
+@import "components/mobile-hamburger";
 
 // VIEWS
 
