--- a/src/styles/components/_task-preview.scss
+++ b/src/styles/components/_task-preview.scss
@@ -148,11 +148,11 @@
         //     width: 7.375rem;
         // }
 
-        .task-left-container {
-            .task-title {
-                width: 70vw;
-            }
-        }
+        // .task-left-container {
+        //     .task-title {
+        //         width: 70vw;
+        //     }
+        // }
 
         // .task-right-container {
         //     min-width: 600px;
