fixed burger menu in mobile mode

--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -181,7 +181,10 @@
         .main-header-mobile {
             display: flex;
             width: 92%;
-            
+        }
+
+        .burger-menu{
+            cursor: pointer;
         }
 
         .main-header {
