--- a/src/styles/components/_group.scss
+++ b/src/styles/components/_group.scss
@@ -81,6 +81,7 @@
             .group-title-input {
                 border: 1px dashed transparent;
                 padding: 5px;
+                height: auto;
                 background-color: inherit;
                 color: $clr3;
                 font-size: rem(17px);
