--- a/src/styles/views/_board-details.scss
+++ b/src/styles/views/_board-details.scss
@@ -4,20 +4,25 @@
     display: flex;
     width: auto;
 
+    .triangle-dent-header {
+        clip-path: polygon(100% 3%, 50% 50%, 100% 100%);
+        background-color: white;
+        position: fixed;
+        top: 70px;
+        left: 62px;
+        height: 20px;
+        width: 15px;
+        z-index: 2;
+    }
+
     .board-creator:hover {
         text-decoration: underline;
     }
 
     .dragging-item {
-        // transform: scale(1.2);
         transform: rotate(2deg);
-        
-    }
 
-    // .chosen-item {
-        // transform: scale(1.2);
-        // transform: rotate(2deg);
-    // }
+    }
 
     .ghost-item {
         visibility: hidden;
@@ -47,7 +52,7 @@
         opacity: 0;
         // transition: opacity .8s;
     }
-    
+
     .screen-fixed {
         position: fixed;
     }
@@ -84,7 +89,7 @@
             }
 
             .board-btns {
-                > * {
+                >* {
                     cursor: pointer;
                     border-radius: 4px;
                     padding: 0 10px;
@@ -126,8 +131,9 @@
             border-radius: 3px;
             box-shadow: 0 1px 2px 0 rgba(159, 159, 160, 0.3), 0 1px 3px 1px rgba(149, 152, 153, 0.15);
             font-size: 14px;
+
             // transform: translate(12px, 40px);
-            > * {
+            >* {
                 text-align: left;
                 cursor: pointer;
                 padding: 3px 1px;
@@ -176,13 +182,14 @@
 
         .btn-integrate {
             margin: 0 rem(20px);
+
             img {
                 width: 15px;
                 margin: 0 5px;
             }
         }
 
-        .btn-automate{
+        .btn-automate {
             img {
                 width: 15px;
                 margin-right: 10px;
@@ -194,11 +201,11 @@
         align-items: center;
         font-family: Roboto, sans-serif;
 
-        > * {
+        >* {
             margin-right: rem(20px);
         }
 
-        > * ::placeholder {
+        >* ::placeholder {
             color: $clr3;
             font-family: Roboto, sans-serif;
         }
@@ -238,11 +245,12 @@
             color: $clr3;
             margin: rem(20px);
             margin-left: rem(-10px);
-            
+
         }
 
         .task-search {
             width: rem(40px);
+
             .el-icon-search {
                 font-size: rem(15px);
                 color: $clr3;
@@ -267,11 +275,12 @@
     .no-border-radius {
         border-top-left-radius: 0;
     }
-    .handle{
+
+    .handle {
         cursor: move;
         font-size: larger;
     }
-    
+
     @include for-mobile-layout {
         display: block;
         width: 100%;
@@ -287,7 +296,7 @@
             top: 50px;
             overflow: auto;
         }
-        
+
         .filters-container {
             display: none;
         }
@@ -296,6 +305,6 @@
             z-index: 2;
         }
     }
-    
-    
+
+
 }
