added picture to updates

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -30,6 +30,7 @@
 @import "components/stopwatch";
 @import "components/chart";
 @import "components/mobile-hamburger";
+@import "components/img-upload";
 
 // VIEWS
 
