hide triangle dent on mobile

--- a/src/styles/views/_board-details.scss
+++ b/src/styles/views/_board-details.scss
@@ -305,6 +305,10 @@
         .main-screen {
             z-index: 2;
         }
+
+        .triangle-dent-header{
+            display: none;
+        }
     }
 
 
