--- a/src/styles/components/_task-details.scss
+++ b/src/styles/components/_task-details.scss
@@ -14,9 +14,9 @@
    
 
     .close-btn {
-        position: absolute;
-        right: 5px;
-        top: 5px;
+        position: relative;
+        right: 3px;
+        top: 10px;
         cursor: pointer;
     }
 
