--- a/src/styles/views/_board-details.scss
+++ b/src/styles/views/_board-details.scss
@@ -136,6 +136,11 @@
                 height: auto;
             }
 
+            .activity-img {
+                width: 25px;
+                margin-right: 5px;
+            }
+
             .board-btns {
                 >* {
                     cursor: pointer;
