--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -241,6 +241,14 @@
                         background-color: $clr4;
                     }
                 }
+
+                .charts-mobile-link {
+                    padding: 7px 0;
+
+                    i {
+                        margin-right: rem(6px);
+                    }
+                }
                 .board-search {
                     .el-icon-search {
                         font-size: 18px;
