--- a/src/styles/views/_board-details.scss
+++ b/src/styles/views/_board-details.scss
@@ -15,7 +15,6 @@
         width: 15px;
         z-index: 2;
     }
- 
 
     .board-activity {
         position: fixed;
@@ -34,22 +33,20 @@
         animation-name: activityDropDown;
         animation-duration: 0.2s;
 
-        
-    .activities-title {
-        font-size: 20px;
-        font-weight: bolder;
-        padding: 15px 0;
-        margin: auto;
-        margin-bottom: 5%;
-    }
+        .activities-title {
+            font-size: 20px;
+            font-weight: bolder;
+            padding: 15px 0;
+            margin: auto;
+            margin-bottom: 5%;
+        }
 
-    .close-btn {
-        position: relative;
-        right: 3px;
-        top: 10px;
-        cursor: pointer;
-    }
-
+        .close-btn {
+            position: relative;
+            right: 3px;
+            top: 10px;
+            cursor: pointer;
+        }
 
         @keyframes activityDropDown {
             from {
@@ -57,10 +54,9 @@
             }
 
             to {
-                height: 100%
+                height: 100%;
             }
         }
-
     }
 
     .board-creator:hover {
@@ -69,7 +65,6 @@
 
     .dragging-item {
         transform: rotate(2deg);
-
     }
 
     .ghost-item {
@@ -104,7 +99,6 @@
     .screen-fixed {
         position: fixed;
     }
-
 
     .board-static-header {
         position: sticky;
@@ -142,7 +136,7 @@
             }
 
             .board-btns {
-                >* {
+                > * {
                     cursor: pointer;
                     border-radius: 4px;
                     padding: 0 10px;
@@ -186,7 +180,7 @@
             font-size: 14px;
 
             // transform: translate(12px, 40px);
-            >* {
+            > * {
                 text-align: left;
                 cursor: pointer;
                 padding: 3px 1px;
@@ -208,6 +202,10 @@
 
         .chart-btn {
             color: $clr3;
+
+            .router-link {
+                width: 100%;
+            }
         }
     }
 
@@ -254,11 +252,11 @@
         align-items: center;
         font-family: Roboto, sans-serif;
 
-        >* {
+        > * {
             margin-right: rem(20px);
         }
 
-        >* ::placeholder {
+        > * ::placeholder {
             color: $clr3;
             font-family: Roboto, sans-serif;
         }
@@ -298,7 +296,6 @@
             color: $clr3;
             margin: rem(20px);
             margin-left: rem(-10px);
-
         }
 
         .task-search {
@@ -334,8 +331,6 @@
         font-size: larger;
     }
 
-
-
     @include for-mobile-layout {
         display: block;
         width: 100%;
@@ -364,6 +359,4 @@
             display: none;
         }
     }
-
-
 }
